# kloch-launcher-kiche

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
kloch_kiche/: __init__.py  _dataclass.py  _download.py  _github_dl.fallback.json  _github_dl.py  _serialized.py
tests/: pytest.ini  test_dataclass.py  test_download.py  test_github_dl.py
