[tool.poetry]
name = "kloch_kiche"
version = "0.1.0"
description = "Launcher plugin for Kloch allowing to quickly execute python applications."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
uv = ">=0.2.4"
kloch = { tag = "v0.7.0", git = "https://github.com/knotsanimation/kloch.git" }
pythonning = { git = "https://github.com/knotsanimation/pythonning.git" }
# // extras
pytest = { version = ">=7.2.0", python = ">=3.7", optional = true }
# XXX: issue with CI on unix machine
typing-extensions = { version = "<4.8", optional = true }
black = { version = "^24.4.2", python = ">=3.9", optional = true }


[tool.poetry.extras]
dev = [
    "black",
]
test = [
    "pytest",
    "typing-extensions",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
